force-app/main/default/objects/Account/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Primary market or DMA (Designated Market Area) this account operates in or targets.</description>
    <label>Market</label>
    <type>Text</type>
    <length>100</length>
</CustomField>