force-app/main/default/objects/Account/fields/Matrix_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Account_ID__c</fullName>
    <description>The account identifier used by the Matrix advertising system. Populated during the initial account mapping setup. Required on the Account for the outbound order sync to succeed.</description>
    <externalId>true</externalId>
    <label>Matrix Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>