force-app/main/default/objects/Account/fields/MDM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>MDM External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>