force-app/main/default/objects/Account/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <description>The media types this account advertises on. Used to route to the correct sales team.</description>
    <label>Media Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Multi-Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>