force-app/main/default/objects/Account/fields/Primary_Agency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Managed Advertisers</relationshipLabel>
    <relationshipName>Managed_Advertisers</relationshipName>
    <type>Lookup</type>
</CustomField>