force-app/main/default/objects/Account/recordTypes/Advertiser.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>End advertiser. Must have an Agency parent account. Advertising opportunities are booked against Advertiser accounts.</description>
    <fullName>Advertiser</fullName>
    <label>Advertiser</label>
</RecordType>