force-app/main/default/objects/Account/recordTypes/Agency.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Advertising agency. Must have a HoldCo parent account. Advertiser accounts roll up through this record type.</description>
    <fullName>Agency</fullName>
    <label>Agency</label>
</RecordType>