force-app/main/default/objects/Account/recordTypes/Direct_Buy.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Direct Buy Advertiser. An end advertiser that purchases media directly from TelevisaUnivision. May optionally be linked to a Primary Agency via the Primary_Agency__c field without requiring a strict parent-account hierarchy.</description>
    <fullName>Direct_Buy</fullName>
    <label>Direct Buy Advertiser</label>
</RecordType>