force-app/main/default/objects/Account/recordTypes/HoldCo.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Top-level holding company. Cannot have a parent account. Agencies and Advertisers roll up through this record type for hierarchy reporting.</description>
    <fullName>HoldCo</fullName>
    <label>HoldCo</label>
</RecordType>