force-app/main/default/objects/Account/validationRules/Enforce_Parent_Hierarchy.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Parent_Hierarchy</fullName>
    <active>true</active>
    <description>Enforces the HoldCo → Agency → Advertiser hierarchy. HoldCo accounts must have no parent. Agency parent must be a HoldCo. Advertiser parent must be an Agency. Direct_Buy accounts may have no parent or an Agency parent.</description>
    <errorConditionFormula>OR(
    AND(
        RecordType.DeveloperName = &quot;HoldCo&quot;,
        NOT(ISBLANK(ParentId))
    ),
    AND(
        RecordType.DeveloperName = &quot;Agency&quot;,
        NOT(ISBLANK(ParentId)),
        Parent.RecordType.DeveloperName != &quot;HoldCo&quot;
    ),
    AND(
        RecordType.DeveloperName = &quot;Advertiser&quot;,
        NOT(ISBLANK(ParentId)),
        Parent.RecordType.DeveloperName != &quot;Agency&quot;
    ),
    AND(
        RecordType.DeveloperName = &quot;Direct_Buy&quot;,
        NOT(ISBLANK(ParentId)),
        Parent.RecordType.DeveloperName != &quot;Agency&quot;
    )
)</errorConditionFormula>
    <errorMessage>Invalid parent hierarchy. HoldCo accounts cannot have a parent. Agency accounts must report to a HoldCo. Advertiser accounts must report to an Agency. Direct Buy Advertiser accounts must report to an Agency (or have no parent).</errorMessage>
</ValidationRule>